добавил ручки и контроллер статистики - топ пользователей по кол-ву задач, статистика задач команды за 7 дней
